kubernetes/namespace.yml
# flux-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flux

#kubectl apply -f namespace.yml
