kubernetes/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: flux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: musman2003/flux-backend:latest
        ports:
        - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: flux
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
